styles.css
/* General formatting */  
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
html, body {
    height: 100%;
    margin: 0;
    padding: 0;
    overflow-x: hidden;
    overscroll-behavior: none;
    background: radial-gradient(circle,rgba(28, 29, 33, 1) 0%, rgba(32, 33, 36, 1) 100%);
}
body{
    padding: 3% 5%;
    font-family: 'Inter', sans-serif;
}
main{
    margin: 60px;
    text-align: center;
    font-size: 15px;
}
header{
    font-size: 20px;
}



/* DAVIS logo */  
.logo-text {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 48px;
    font-weight: bold;
    background: linear-gradient(90deg, #92cce4, #caeeb8, #c7b3d8, #fac099);
    background-size: 600% 600%;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    animation: moveGradient 5s linear infinite;
}
@keyframes moveGradient {
    0% {
        background-position: 0% 50%;
    }
    50% {
        background-position: 100% 50%;
    }
    100% {
        background-position: 0% 50%;
    }
}
  


/* Logo hyperlinks */  
.linkedin-img{
    width: 34px;
    height: auto;
    transition: transform 0.3s ease;
}
.linkedin-img:hover {
    transform: scale(1.2);
}
.github-img{
    width: 34px;
    height: auto;
    transition: transform 0.3s ease;
}
.github-img:hover {
    transform: scale(1.2);
}



/* DAVIS logo & logo hyperlinks section */  
.top-row{
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.top-row-right-section{
    padding-right: 3.5%;
    align-items: center;
    display: flex;
    gap: 20%;
}



/* Navigation bar */  
nav{
    text-align: center;
    padding-top: 1%;
}
nav a{
    position: relative;
    margin: 0 40px;
    text-decoration: none;
    font-weight: 425;
    font-size: 15px;
    font-family: 'Inter', sans-serif;
    color: white;
}
nav a::after {
    content: "";
    position: absolute;
    left: 0;
    bottom: -4px;
    height: 3px;
    width: 100%;
    background: linear-gradient(to right, #92cce4, #caeeb8, #c7b3d8, #fac099);
    transform: scaleX(0);
    transform-origin: left;
    transition: transform 0.3s ease-in-out;
}
nav a:hover::after {
    transform: scaleX(1);
}



/* Hide mobile view */  
.mobile-menu{
    display: none;
}



/* Mobile CSS */  
@media (max-width: 768px) {
    /* Switch device view */  
    .desktop-nav {
        display: none;
    }
    .mobile-menu {
        display: block;
        position: relative;
    }



    /* General reformatting */
    html, body {
        margin: 0;
        padding: 0;
        background-color: black; /* fallback */
    }  
    body{
        position: relative;
        overflow-x: hidden;
        overscroll-behavior-y: none;
    }
    .top-row-right-section{
        gap: 9%;
    }
    @supports(padding: max(0px)) {
        body {
          padding-top: constant(safe-area-inset-top); /* old iOS */
          padding-top: env(safe-area-inset-top);      /* new iOS */
        }
    }



    /* Logo hyperlinks */  
    .linkedin-img{
        width: 30px;
        height: auto;
    }
    .github-img{
        width: 30px;
        height: auto;
    }


    
    /* Menu button */  
    #menu-button {
        font-size: 35px;
        padding-bottom: 7px;
        background: none;
        border: none;
        color: white;
        cursor: pointer;
        transition: transform 0.3s ease;
    }
    #menu-button:hover {
        transform: scale(1.2);
    }



    /* Menu dropdown navigation */  
    .dropdown-content {
        position: fixed;
        top: 0%;
        left: 0%;
        width: 100%;
        height: 100%;
        background: radial-gradient(circle, rgba(28, 29, 33, 1) 0%, rgba(32, 33, 36, 1) 100%);
        display: none;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }
    .dropdown-content a {
        position: relative;
        color: white;
        font-size: 24px;
        padding: 8.75%;
        text-decoration: none;
        font-family: 'Inter', sans-serif;
        display: block;
        text-align: center;
    }
    .dropdown-content a::after {
        content: "";
        position: absolute;
        left: 0%;
        bottom: 25%;
        height: 3px;
        width: 100%;
        background: linear-gradient(to right, #92cce4, #caeeb8, #c7b3d8, #fac099);
        transform: scaleX(0);
        transform-origin: left;
        transition: transform 0.3s ease-in-out;
    }
    .dropdown-content a:hover::after {
        transform: scaleX(1);
    }
    #close-button {
        position: absolute;
        top: 4%;
        right: 6%;
        background: none;
        border: none;
        font-size: 35px;
        color: white;
        cursor: pointer;
    }
    .dropdown-content.show {
        display: flex;
    }
  }



/* Breakpoints: 
0px to 600px
601px & upwards
768px & upwards
992px & upwards
1200 & upwards
*/

